Revise 'About Me' section in index.html
Updated personal introduction with new professional details and skills.

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 												<span class="heading-meta">About Me</span>
 												<h1 class="arjun-heading">Who Am I?</h1>
 												<p>
-													Hi I'm<strong> Arjun Bhandari</strong>. I have been working as a Software Engineer for more than 4+ years and have hands-on experience in multiple programming languages, frameworks & technologies. 
-													I mostly worked in JavaScript, Typescript, NodeJS, ExpressJS, Flutter, Dart,  Python, and Django Framework.
+													Hi I'm<strong> Arjun Bhandari</strong>. AWS Certified Solutions Architect with 5 years’ experience in scalable web and mobile apps using TypeScript, Node.js, React, Flutter, and AWS. Skilled in REST/GraphQL APIs, microservices, and cloud-native design. Delivered HIPAA-compliant healthcare platforms and integrated Generative AI (OpenAI, LangChain, RAG). Strong in Agile, performance optimization, and end-to-end delivery.
 												</p>
 												<p>I work on R & D projects, manage and deploy software applications, and integrate project management methodologies for software development.</p>
 												<p>My areas of interest are Web Development, Mobile App Development, AI and AWS. If you would like more detailed information about me, you can download and view my CV.</p>
