--- a/index.html
+++ b/index.html
@@ -48,15 +48,25 @@
         <aside
           id="arjun-aside"
           role="complementary"
-          class="border js-fullheight">
-          <div class="text-center">
+          class="border js-fullheight bg-light shadow-sm p-3">
+          <div class="text-center mb-4">
             <div
-              class="author-img"
-              style="background-image: url(../public/images/profile.png)"></div>
-            <h1 id="arjun-logo">
-              <a href="https://bhandariarjun.com.np/">Arjun Bhandari</a>
+              class="author-img rounded-circle mx-auto mb-3"
+              style="
+                background-image: url('../public/images/profile.png');
+                width: 120px;
+                height: 120px;
+                background-size: cover;
+                background-position: center;
+              "></div>
+            <h1 id="arjun-logo" class="h4 mb-1">
+              <a
+                href="https://bhandariarjun.com.np/"
+                class="text-dark text-decoration-none"
+                >Arjun Bhandari</a
+              >
             </h1>
-            <h3 class="position">
+            <h3 class="position h6 text-muted">
               <a href="#" data-nav-section="services">Developer / Freelancer</a>
             </h3>
           </div>
