Remove contact details

--- a/index.html
+++ b/index.html
@@ -92,47 +92,6 @@
               </ul>
             </div>
           </nav>
-
-          <div class="arjun-footer">
-            <span>Connect With Me: </span>
-            <div class="social-sign mr-auto">
-              <div>
-                <a
-                  class="fb"
-                  title="Facebook"
-                  target="_blank"
-                  href="http://www.facebook.com/arjun.bhandari.7505"
-                  ><span><i class="fa fa-facebook"></i></span>
-                </a>
-              </div>
-              <div>
-                <a
-                  class="instagram"
-                  title="Instagram"
-                  target="_blank"
-                  href="http://www.instagram.com/_arjun_bhandari_">
-                  <span><i class="fa fa-instagram"></i></span>
-                </a>
-              </div>
-              <div>
-                <a
-                  class="linkedin"
-                  title="LinkedIn"
-                  target="_blank"
-                  href="https://www.linkedin.com/in/arjun-bhandari-712334156/"
-                  ><span><i class="fa fa-linkedin"></i> </span
-                ></a>
-              </div>
-              <div>
-                <a
-                  class="mail"
-                  title="Mail"
-                  href="mailto:arjunbhandari3773@gmail.com"
-                  ><span><i class="fa fa-envelope-o"></i> </span>
-                </a>
-              </div>
-            </div>
-          </div>
         </aside>
 
         <div id="arjun-main">
@@ -461,7 +420,7 @@
                   class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
                   data-animate-effect="fadeInLeft">
                   <span class="heading-meta">Skills</span>
-                  <h2 class="arjun-heading animate-box">Technical Expertise</h2>
+                  <h1 class="arjun-heading">Technical Expertise</h1>
                 </div>
               </div>
               <div class="row">
@@ -543,9 +502,7 @@
                   class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
                   data-animate-effect="fadeInLeft">
                   <span class="heading-meta">Experience</span>
-                  <h2 class="arjun-heading animate-box">
-                    Professional Experience
-                  </h2>
+                  <h1 class="arjun-heading">Professional Experience</h1>
                 </div>
               </div>
 
@@ -812,36 +769,6 @@
                         </p>
                       </div>
                     </div>
-
-                    <!-- Item 4 -->
-                    <div class="edu-item">
-                      <div
-                        class="edu-header"
-                        data-toggle="collapse"
-                        data-target="#edu4">
-                        <div class="edu-icon">
-                          <i class="fa fa-pencil-square-o"></i>
-                        </div>
-                        <div class="edu-title">
-                          <h4>Secondary Level Education (S.L.C.)</h4>
-                          <span
-                            >Nawalpur Higher Secondary Boarding School —
-                            2014</span
-                          >
-                        </div>
-                        <i class="fa fa-chevron-down toggle-icon"></i>
-                      </div>
-                      <div id="edu4" class="edu-body collapse">
-                        <p>
-                          Completed
-                          <strong>Secondary Level Education</strong> from
-                          <strong
-                            >Nawalpur Higher Secondary Boarding School</strong
-                          >
-                          with distinction, scoring 87.5%.
-                        </p>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -859,113 +786,70 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-5">
-                  <div
-                    class="arjun-feature arjun-feature-sm animate-box"
-                    data-animate-effect="fadeInLeft">
-                    <div class="arjun-icon">
-                      <i class="fa fa-envelope-o"></i>
-                    </div>
-                    <div class="arjun-text">
-                      <p>
-                        <a href="mailto:arjunbhandari3773@gmail.com"
-                          ><strong>arjunbhandari3773@gmail.com</strong>
-                        </a>
-                      </p>
-                    </div>
-                  </div>
-
-                  <div
-                    class="arjun-feature arjun-feature-sm animate-box"
-                    data-animate-effect="fadeInLeft">
-                    <div class="arjun-icon">
-                      <i class="fa fa-home"></i>
-                    </div>
-                    <div class="arjun-text">
-                      <p><strong>Madhyabindu, Nawalpur </strong></p>
-                    </div>
-                  </div>
-
-                  <div
-                    class="arjun-feature arjun-feature-sm animate-box"
-                    data-animate-effect="fadeInLeft">
-                    <div class="arjun-icon">
-                      <i class="fa fa-phone"></i>
-                    </div>
-                    <div class="arjun-text">
-                      <p>
-                        <strong>+977 9847014289</strong><br />
-                        Sun-Fri - 9:00 AM to 5:00 PM
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-7 col-md-push-1">
-                  <div
-                    class="contact-form col-md-10 col-md-offset-1 col-md-pull-1 animate-box"
-                    data-animate-effect="fadeInRight">
-                    <div id="form-messages"></div>
-                    <form
-                      class="needs-validation"
-                      id="ajax-contact"
-                      method="POST"
-                      data-netlify="true"
-                      validate
-                      name="”EmailForm”"
-                      netlify>
-                      <div class="col-xs-12">
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="name"
-                            class="form-control"
-                            placeholder="Your Name"
-                            id="name"
-                            required />
-                        </div>
+                <div
+                  class="contact-form col-md-12 col-md-offset-1 col-md-pull-1 animate-box"
+                  data-animate-effect="fadeInRight">
+                  <div id="form-messages"></div>
+                  <form
+                    class="needs-validation"
+                    id="ajax-contact"
+                    method="POST"
+                    data-netlify="true"
+                    validate
+                    name="”EmailForm”"
+                    netlify>
+                    <div class="col-xs-12">
+                      <div class="form-group">
+                        <input
+                          type="text"
+                          name="name"
+                          class="form-control"
+                          placeholder="Your Name"
+                          id="name"
+                          required />
                       </div>
-                      <div class="col-xs-12">
-                        <div class="form-group">
-                          <input
-                            type="email"
-                            name="email"
-                            class="form-control"
-                            placeholder="Your Email"
-                            id="email"
-                            required />
-                        </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="form-group">
+                        <input
+                          type="email"
+                          name="email"
+                          class="form-control"
+                          placeholder="Your Email"
+                          id="email"
+                          required />
                       </div>
-                      <div class="col-xs-12">
-                        <div class="form-group">
-                          <input
-                            type="subject"
-                            name="subject"
-                            class="form-control"
-                            placeholder="Subject"
-                            id="subject"
-                            required />
-                        </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="form-group">
+                        <input
+                          type="subject"
+                          name="subject"
+                          class="form-control"
+                          placeholder="Subject"
+                          id="subject"
+                          required />
                       </div>
-                      <div class="col-xs-12">
-                        <div class="form-group">
-                          <textarea
-                            name="message"
-                            id="message"
-                            class="form-control"
-                            rows="8"
-                            placeholder="Your Message"
-                            required></textarea>
-                        </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="form-group">
+                        <textarea
+                          name="message"
+                          id="message"
+                          class="form-control"
+                          rows="8"
+                          placeholder="Your Message"
+                          required></textarea>
                       </div>
-                      <button
-                        id="btnSubmit"
-                        type="submit"
-                        name="submit"
-                        class="btn btn-lg btn-block btn-primary">
-                        Send
-                      </button>
-                    </form>
-                  </div>
+                    </div>
+                    <button
+                      id="btnSubmit"
+                      type="submit"
+                      name="submit"
+                      class="btn btn-lg btn-block btn-primary">
+                      Send
+                    </button>
+                  </form>
                 </div>
               </div>
             </div>
